# corewar

./: CMakeLists.txt  Makefile  README.md  author  corewar  corewar.exe.stackdump  my.out  my_vm  real.out
asm/: Makefile  asm
asm/examples/: bee_gees.cor  h  kalle.cor  kalle.s
asm/includes/: asm.h  asm2.h
asm/src/: check.c  count.c  find_label.c  free_init.c  get_values.c  is_command.c  is_comment.c  is_label.c  is_name.c  main.c  switch_args.c  valid.c  write_bin.c  write_n_byte.c
corewar/: Makefile  corewar
corewar/includes/: game.h  op.h
corewar/src/: carriage.c  check_pos.c  display_arena.c  error.c  game_init.c  int_ops.c  players_init.c
corewar/src/champ_ops/: st.c
disasm/: Makefile  disasm
disasm/includes/: asm2.h
disasm/src/: check_and_find.c  disasm.c  main.c  write.c
disasm/tests/: 42.s  Asomb.s  nl_at_header.cor  ultima.cor  ultima.s
includes/: corewar.h  game.h
my_vm.dSYM/Contents/: Info.plist
my_vm.dSYM/Contents/Resources/DWARF/: my_vm
src/: add.c  aff.c  and.c  carriage.c  champ_op.c  check_pos.c  corewar_init.c  display_arena.c  endgame.c  error.c  fork.c  game.c  game_init.c  get_args.c  get_int.c  int_ops.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  main.c  op.c  ops_array.c  or.c  parse_players.c  players_init.c  st.c  sti.c  sub.c  xor.c  zjmp.c
src/champ_ops/: add.c  aff.c  and.c  check_pos.c  fork.c  get_arg.c  get_args.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  ops_array.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
