cmake_minimum_required(VERSION 3.17)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/includes)
include_directories(includes)
include_directories(libft/includes)

add_executable(corewar
        ft_printf/includes/ft_printf.h
        ft_printf/srcs/case_of_error.c
        ft_printf/srcs/ft_printf.c
        ft_printf/srcs/ft_recursive_power.c
        ft_printf/srcs/func_arr.c
        ft_printf/srcs/get_array_of_parts_of_long_nbr.c
        ft_printf/srcs/get_res_of_long_arithmetic.c
        ft_printf/srcs/initialize.c
        ft_printf/srcs/long_add.c
        ft_printf/srcs/long_mult.c
        ft_printf/srcs/morse.c
        ft_printf/srcs/pf_b.c
        ft_printf/srcs/pf_bhex.c
        ft_printf/srcs/pf_colours.c
        ft_printf/srcs/pf_dtoa.c
        ft_printf/srcs/pf_find_last_symbol_in_string.c
        ft_printf/srcs/pf_flag_diez.c
        ft_printf/srcs/pf_flag_minus.c
        ft_printf/srcs/pf_flag_zero.c
        ft_printf/srcs/pf_flags.c
        ft_printf/srcs/pf_flags_plus_and_space.c
        ft_printf/srcs/pf_float.c
        ft_printf/srcs/pf_hex.c
        ft_printf/srcs/pf_itoa.c
        ft_printf/srcs/pf_modifier.c
        ft_printf/srcs/pf_n.c
        ft_printf/srcs/pf_no_flags.c
        ft_printf/srcs/pf_oct.c
        ft_printf/srcs/pf_precision.c
        ft_printf/srcs/pf_putvalue.c
        ft_printf/srcs/pf_to_binary.c
        ft_printf/srcs/pf_type.c
        ft_printf/srcs/pf_u.c
        ft_printf/srcs/pf_width.c
        ft_printf/srcs/print_precision.c
        ft_printf/srcs/re_initialize.c
        ft_printf/srcs/rounding_nbr_of_chars.c
        ft_printf/srcs/str_of_chars.c
        includes/corewar.h
        includes/op.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_clearing.c
        libft/srcs/ft_freep.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_islower.c
        libft/srcs/ft_isnumber.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_isspace.c
        libft/srcs/ft_isupper.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstfree.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstpushback.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_realloc.c
        libft/srcs/ft_sort_params.c
        libft/srcs/ft_sqrt.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strsplit_full.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_swap.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_ull_pow.c
        libft/srcs/get_next_line.c
        libft/srcs/gnl_free_fd.c
        src/corewar_init.c
        src/error.c
        src/game_init.c
        src/main.c
        src/parse_players.c
        src/players_init.c)
